# study-qml

./: .cproject  .project  CMakeLists.txt
qml/: CMakeLists.txt  Calendar.qml  FileBrowser.qml  FileSystemModel.qml  YearCalendar.qml  qmldir
src/: CMakeLists.txt  FileSystemIconProvider.cpp  FileSystemIconProvider.h  FileSystemModel.cpp  FileSystemModel.h  calendarmodel.cpp  calendarmodel.h  qmlextension_plugin.cpp  qmlextension_plugin.h
